--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">DiscoSwap</string>
     <string name="title_messages">Messages</string>
+    <string name="title_orders">Orders</string>
+    <string name="title_inventory">Inventory</string>
 </resources>
