Add: Message detail screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="title_orders_paid">Paid</string>
     <string name="title_orders_sent">Sent</string>
     <string name="title_orders_other">Other</string>
+    <string name="message_username">From:</string>
 </resources>
