--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="title_orders_sent">Sent</string>
     <string name="title_orders_other">Other</string>
     <string name="message_username">From:</string>
+    <string name="menu_back">Menu back</string>
 </resources>
